--- a/client/src/style.css
+++ b/client/src/style.css
@@ -48,6 +48,15 @@ label {
     color: transparent;
 }
 
+#other-players {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
+}
+
 /* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
