top card displayed as a card

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -56,6 +56,14 @@ label {
     transform: translate(-50%, -50%);
     width: 500px;
 }
+#other-players {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
+}
 
 /* The Modal (background) */
 .modal {
